<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name_1">DingDong</string>
    <string name="error_system_upgrading">Hệ thống đang nâng cấp. Vui lòng quay lại sau!</string>
    <string name="error_fail_default">Hệ thống đang bận. Vui lòng thử lại sau!</string>
    <string name="internal_storage">Internal storage</string>
    <string name="dong">Đóng</string>
    <string name="title_login">truy cập ứng dụng</string>
    <string name="tong_tien_nop">Tổng tiền nộp</string>
    <string name="speaker">Loa</string>
    <string name="mute">Tắt âm</string>
    <string name="keypad">Bàn phím</string>
    <string name="video">Video</string>
    <string name="incoming">Cuộc gọi đến</string>
    <string name="so_tham_chieu">Số tham chiếu</string>
    <string name="info_gomhang"><![CDATA[- Xác nhận tin<br />- Cập nhật tin thu gom]]></string>
    <string name="info_phathang"><![CDATA[- Cập nhật thông tin thu hộ COD<br />- Cập nhật thông tin báo phát]]></string>
    <string name="info_dinhvi"><![CDATA[- Tìm kiếm thông tin bưu gửi<br />- Định vị trạng thái bưu gửi]]></string>
    <string name="info_nguoidung"><![CDATA[- Thông tin người dùng<br />- Định vị vị trí]]></string>
    <string name="info_collect_service_confirm"><![CDATA[- Xác nhận tin thu gom<br />- Từ chối tin thu gom]]></string>
    <string name="info_collect_service_success"><![CDATA[- Cập nhật tin thu gom<br />- Cập nhật trạng thái thu gom]]></string>
    <string name="info_delivery_manage"><![CDATA[- Cập nhật thông tin người nhận hàng<br />- Cập nhật thông tin thời gian phát]]></string>
    <string name="info_delivery_service_success"><![CDATA[- Cập nhật thông tin người nhận hàng<br />- Cập nhật thông tin thời gian phát]]></string>
    <string name="info_delivery_service_return"><![CDATA[- Cập nhật lý do<br />- Cập nhật phương án xử lý]]></string>
    <string name="info_delivery_statistic"><![CDATA[- Thông tin báo phát<br />- Lịch sử báo phát]]></string>
    <string name="search_hint">Số hiệu bưu gửi: </string>
    <string name="action_search">Search</string>
    <string name="default_notification_channel_id">1</string>
    <string name="add">add</string>
    <string name="mapbox_style_url">mapbox://styles/mapbox/light-v9</string>
    <string name="reset">reset</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="quet_ma_vach">Quét mã vạch</string>
    <string name="notification_channel_id">channel_id_dingdong</string>
    <string name="cam_use_capture">Sử dụng</string>
    <string name="retry">Thử lại</string>
    <string name="sign_retry">Ký lại</string>
    <string name="thong_ke_gach_no">Thống kê gạch nợ</string>
    <string name="success">Gạch nợ thành công</string>
    <string name="amount">Số lượng:</string>
    <string name="amount_of_money">Số tiền</string>
    <string name="fee_ppa">Phí PPA</string>
    <string name="fee_ship">Phí ship</string>
    <string name="le_phi_sau_thu">Lệ Phí thu sau</string>
    <string name="phi_huy_don_hang">Phí hủy đơn hàng</string>
    <string name="vietnamese_currency">đ</string>
    <string name="not_success">Gạch nợ thất bại</string>
    <string name="gach_no_thanh_cong">THỐNG KÊ GẠCH NỢ THÀNH CÔNG</string>
    <string name="gach_no_khong_thanh_cong">THỐNG KÊ GẠCH NỢ KHÔNG THÀNH CÔNG</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaG9hbmdtYW5oMTkwOSIsImEiOiJjazczMjZhYTUwNGRxM2VxdzBhdWxqZmg0In0.bS71h7OOLd1OobSajeMQ9g</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="notification">Thông báo</string>
    <string name="chon_tuyen">Chọn tuyến</string>
    <string name="select_provider">Chọn nhà cung cấp</string>
    <string name="chon_tui">Chọn túi</string>
    <string name="update_phone_number">Bạn có muốn cập nhật số điện thoại lên hệ thống không?</string>
    <string name="fee">Cước:</string>
    <string name="new_delivery">GIAO MỚI</string>
    <string name="not_deliver_yet">CHƯA PHÁT</string>
    <string name="new_collected">THU GOM MỚI</string>
    <string name="not_collect_yet">TỒN CHƯA GOM</string>
    <string name="sl_dia_chi">SL địa chỉ:</string>
    <string name="sl_tin">SL tin:</string>
    <string name="weigh">Trọng lượng:</string>
    <string name="employee_balance">Số tiền đã thu:</string>
    <string name="employee_balance_success">Số tiền đã nộp:</string>
    <string name="employee_balance_missing">Số tiền còn phải nộp:</string>
    <string name="amount_max">Hạn mức : </string>
    <string name="so_tien_da_thu">Số tiền đã thu : </string>
    <string name="cancel">Hủy bỏ</string>
    <string name="pick_all">Chọn tất cả</string>
    <string name="offline_delivery">Báo phát offline</string>
    <string name="statistic_success_delivery">THỐNG KÊ BÁO PHÁT THÀNH CÔNG</string>
    <string name="statistic_error_delivery">THỐNG KÊ BÁO PHÁT KHÔNG THÀNH CÔNG</string>
    <string name="statistic_returned_delivery">THỐNG KÊ CHUYỂN HOÀN</string>
    <string name="statistic_continuous_delivery">THỐNG KÊ CHUYỂN TIẾP</string>
    <string name="cancel_sign">Hủy bỏ</string>
    <string name="update_sign">Cập nhật</string>
    <string name="default_amount">Tổng tiền: 0 đ</string>
    <string name="default_quantity">Số lượng: 0</string>
    <string name="total_amount">Tổng tiền:</string>
    <string name="title_edit_phone_number">Sửa số điện thoại</string>
    <string name="calling_method">Thực hiện thao tác gọi</string>
    <string name="calling">Đang gọi...</string>
    <string name="messaging">Nhắn tin</string>
    <string name="message_not_found_record_from_local_storage">Không tìm thấy bưu gửi trên hệ thống</string>
    <string name="message_found_record_from_local_storage">Tìm kiếm bưu gửi thành công</string>
    <string name="message_update_successfully_record_from_local_storage">Cập nhật dữ liệu thành công</string>
    <string name="delivery_succesfully">Báo phát thành công</string>
    <string name="delivery_not_succesfully">Báo phát không thành công</string>
    <string name="content">Nội dung:</string>
    <string name="confirm">Đồng ý</string>
    <string name="town">Xã</string>
    <string name="district">Quận/Huyện</string>
    <string name="city">Tỉnh/TP</string>
    <string name="detail_address">Địa chỉ chi tiết</string>
    <string name="address_name">Tên địa chỉ</string>
    <string name="address_receiver_name">Địa chỉ người nhận</string>
    <string name="not_found_any_address">Không tìm thấy địa chỉ nào</string>
    <string name="cancel_causal">Nguyên nhân</string>
    <string name="cancel_reason">Lý do</string>
    <string name="not_yet_approved">Chờ nhận</string>
    <string name="disagreed">Đã hủy</string>
    <string name="agreed">Đã nhận</string>
    <string name="disapproved">Đã từ chối</string>
    <string name="total_fee">Tổng cước:</string>
    <string name="lading_code">Số bưu gửi:</string>
    <string name="not_yet_appproved">Chưa phê duyệt</string>
    <string name="approved">Phê duyệt đồng ý</string>
    <string name="not_approved">Phê duyệt không đồng ý</string>
    <string name="send_route">Tuyến được chuyển</string>
    <string name="receive_route">Tuyến ban đầu</string>
    <string name="search_route_change">Tìm kiếm chuyển tuyến</string>
    <string name="change_address">thay đổi địa chỉ</string>
    <string name="lead_deliver">chỉ dẫn phát</string>
    <string name="smart_code">Smart code:</string>
    <string name="fee_collected">Cước thu của người nhận</string>
    <string name="cod_amount">Tiền COD</string>
    <string name="not_found_current_location">Không tìm thấy vị trí hiện tại</string>
    <string name="cancel_require">Hủy yêu cầu</string>
    <string name="cancel_history">Lịch sử hủy:</string>
    <string name="cancel_delivery">Hủy báo phát</string>
    <string name="sender_name">Người gửi</string>
    <string name="receiver_name">Người nhận</string>
    <string name="cod">Số tiền COD</string>
    <string name="fee_money">Tiền cước</string>
    <string name="call_service">Gọi dịch vụ</string>
    <string name="not_link_to_e_wallet">Bạn chưa liên kết với Ví điện tử PostPay</string>
    <string name="linked_to_e_wallet">Đã liên kết, bạn có thể thực hiện nộp tiền thông qua Ví điện tử PostPay</string>
    <string name="please_link_to_e_post_wallet_first">Vui lòng liên kết Ví điện tử PostPay trước.</string>
    <string name="please_link_to_e_post_wallet">Bạn chưa liên kết tài khoản!</string>
    <string name="payment_cancel">Thoát</string>
    <string name="payment_confirn">Đồng ý</string>
    <string name="find_package_quickly">Tìm kiếm nhanh bưu gửi</string>
    <string name="pay">Thanh toán</string>
    <string name="enter_package">Nhập bưu gửi</string>
    <string name="enter_relationship">Nhập mối quan hệ khác</string>
    <string name="pay_money">Nộp tiền</string>
    <string name="e_wallet">Ví Điện Tử</string>
    <string name="account_info">THÔNG TIN TÀI KHOẢN</string>
    <string name="enter_name_phone_number_address">Nhập bưu gửi, tên, sđt, địa chỉ</string>
    <string name="create_bd13">Lập bảng kê (BD13)</string>
    <string name="salary">Tiền lương</string>
    <string name="package_info">Thông tin vận đơn</string>
    <string name="type_delivery">Hình thức báo phát</string>
    <string name="ok">Thành công</string>
    <string name="not_ok">Không thành công</string>
    <string name="amount_collect">Số tiền thu</string>
    <string name="pick_reason">Chọn lý do</string>
    <string name="offline_solution">Phương án xử lý</string>
    <string name="pick_solutions">Chọn phương án</string>
    <string name="note">Ghi chú</string>
    <string name="sign">Ký nhận</string>
    <string name="take_photos">Chụp ảnh</string>
    <string name="link_to_e_wallet">Liên kết Ví Bưu Điện</string>
    <string name="e_wallet_post">Ví Bưu Điện</string>
    <string name="detail_package">Chi tiết bưu gửi</string>
    <string name="id_user">ID người dùng:</string>
    <string name="connect">Kết Nối</string>
    <string name="phone_number_which_registered_to_e_wallet">Số điện thoại đăng kí ví:</string>
    <string name="link_to_e_post_wallet">Liên Kết Ví Bưu Điện</string>
    <string name="wrong_otp_pattern">OTP chưa đúng định dạng</string>
    <string name="otp_pattern">OTP NỘP TIỀN</string>
    <string name="otp_hint_pattern">Nhập OTP</string>
    <string name="batch_code">Mã lô</string>
    <string name="grand_father">Ông</string>
    <string name="grand_mother">Bà</string>
    <string name="father">Bố</string>
    <string name="mother">Mẹ</string>
    <string name="brother">Anh</string>
    <string name="sister">Chị</string>
    <string name="brother1">Em</string>
    <string name="wife">Vợ</string>
    <string name="husband">Chồng</string>
    <string name="child">Con</string>
    <string name="archival">Văn Thư</string>
    <string name="labor">Lao Công</string>
    <string name="bodyguard">Bảo Vệ</string>
    <string name="R001">Người mua</string>
    <string name="R002">Hàng xóm</string>
    <string name="R003">Trợ lý</string>
    <string name="R004">Bảo vệ của căn hộ</string>
    <string name="R005">Người nhà/anh em</string>
    <string name="R006">Sếp/quản lý/nhân viên</string>
    <string name="R007">Lái xe</string>
    <string name="R008">NV hành chính văn phòng</string>
    <string name="R009">Giúp việc</string>
    <string name="R011">Nhân viên an ninh</string>
    <string name="R012">Lễ tân</string>
    <string name="R013">Phòng chuyển phát</string>
    <string name="R017">Hòm thư</string>
    <string name="other">Khác</string>
    <string name="you_have_not_pick_any_package">Bạn chưa chọn bưu gửi nào</string>
    <string name="you_have_not_pick_route">Bạn chưa chọn tuyến</string>
    <string name="you_have_not_picked_postman">Bạn chưa chọn bưu tá</string>
    <string name="pick_route">Chọn tuyến</string>
    <string name="please_pick_route">Vui lòng chọn tuyến</string>
    <string name="pick_postman">Chọn bưu tá</string>
</resources>