<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_grand_father"
        android:title="@string/grand_father" />
    <item
        android:id="@+id/menu_grand_mother"
        android:title="@string/grand_mother" />
    <item
        android:id="@+id/menu_father"
        android:title="@string/father" />
    <item
        android:id="@+id/menu_mother"
        android:title="@string/mother" />
    <item
        android:id="@+id/menu_brother"
        android:title="@string/brother" />
    <item
        android:id="@+id/menu_brother1"
        android:title="@string/brother1" />
    <item
        android:id="@+id/menu_sister"
        android:title="@string/sister" />
    <item
        android:id="@+id/menu_wife"
        android:title="@string/wife" />
    <item
        android:id="@+id/menu_husband"
        android:title="@string/husband" />
    <item
        android:id="@+id/menu_child"
        android:title="@string/child" />
    <item
        android:id="@+id/menu_archival"
        android:title="@string/archival" />
    <item
        android:id="@+id/menu_labor"
        android:title="@string/labor" />
    <item
        android:id="@+id/menu_bodyguard"
        android:title="@string/bodyguard" />
  <item
        android:id="@+id/menu_r001"
        android:title="@string/R001" />
    <item
        android:id="@+id/menu_r002"
        android:title="@string/R002" />
    <item
        android:id="@+id/menu_r003"
        android:title="@string/R003" />
    <item
        android:id="@+id/menu_r004"
        android:title="@string/R004" />
    <item
        android:id="@+id/menu_r005"
        android:title="@string/R006" />
    <item
        android:id="@+id/menu_r006"
        android:title="@string/R006" />
    <item
        android:id="@+id/menu_r007"
        android:title="@string/R007" />
    <item
        android:id="@+id/menu_r008"
        android:title="@string/R008" />
    <item
        android:id="@+id/menu_r009"
        android:title="@string/R009" />
    <item
        android:id="@+id/menu_r011"
        android:title="@string/R011" />
    <item
        android:id="@+id/menu_r012"
        android:title="@string/R012" />
    <item
        android:id="@+id/menu_r013"
        android:title="@string/R013" />
    <item
        android:id="@+id/menu_r017"
        android:title="@string/R017" />
    <item
        android:id="@+id/menu_other"
        android:title="@string/other" />

</menu>
