<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_not_connected_to_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size_30dp"
            android:orientation="vertical">

            <com.ems.dingdong.views.CustomTextView
                android:id="@+id/tv_info_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone" />

            <com.ems.dingdong.views.OtpEditText
                android:id="@+id/et_otp"
                app:maxLength="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="6"
                android:textIsSelectable="false"
                android:textSize="40sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_from_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.ems.dingdong.views.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/phone_number_which_registered_to_e_wallet"
                        android:textSize="@dimen/_14sdp" />

                    <com.ems.dingdong.views.CustomEditText
                        android:id="@+id/edt_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/bg_border_edittext"
                        android:enabled="false"
                        android:inputType="phone"
                        android:padding="@dimen/_5sdp"
                        android:text="0218301923"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.ems.dingdong.views.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/id_user"
                        android:textSize="@dimen/_14sdp" />

                    <com.ems.dingdong.views.CustomEditText
                        android:id="@+id/id_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_edittext"
                        android:enabled="false"
                        android:padding="@dimen/_5sdp"
                        android:text="120391ádadsa823"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <com.ems.dingdong.views.CustomTextView
                android:id="@+id/btn_link_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/bg_gradient_radius_5"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/connect"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>