<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include layout="@layout/item_head_bg_common" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/dimen_56dp"
                android:layout_height="@dimen/dimen_56dp"
                android:layout_centerVertical="true"
                android:padding="@dimen/dimen_10dp"
                android:src="@drawable/ic_back_shadown" />

            <com.ems.dingdong.views.CustomBoldTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/thong_ke_gach_no"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp" />
        </RelativeLayout>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tv_tongbuugui"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Tổng số bưu gửi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_14dp" />

                <TextView
                    android:id="@+id/tv_tongkhoanthu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Tổng khoản thu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:orientation="vertical">

                <com.ems.dingdong.views.CustomBoldTextView
                    style="@style/HeaderNews"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_header_common"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/success"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_radius_bottom_common"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <com.ems.dingdong.views.CustomTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:paddingTop="@dimen/dimen_10dp"
                            android:paddingBottom="@dimen/dimen_10dp"
                            android:text="@string/amount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14sp" />

                        <com.ems.dingdong.views.CustomTextView
                            android:id="@+id/tv_Amount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:paddingTop="@dimen/dimen_10dp"
                            android:paddingBottom="@dimen/dimen_10dp"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <com.ems.dingdong.views.CustomTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:paddingTop="@dimen/dimen_10dp"
                            android:paddingBottom="@dimen/dimen_10dp"
                            android:text="@string/amount_of_money"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14sp" />

                        <com.ems.dingdong.views.CustomTextView
                            android:id="@+id/tv_AmountOfMoney"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.4"
                            android:paddingTop="@dimen/dimen_10dp"
                            android:paddingBottom="@dimen/dimen_10dp"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14sp" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_unsuccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:orientation="vertical">

                <com.ems.dingdong.views.CustomBoldTextView
                    style="@style/HeaderNews"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_header_common"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/not_success"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_radius_bottom_common"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <com.ems.dingdong.views.CustomTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:paddingTop="@dimen/dimen_10dp"
                            android:paddingBottom="@dimen/dimen_10dp"
                            android:text="@string/amount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14sp" />

                        <com.ems.dingdong.views.CustomTextView
                            android:id="@+id/tv_Unsuccess_Amount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:paddingTop="@dimen/dimen_10dp"
                            android:paddingBottom="@dimen/dimen_10dp"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <com.ems.dingdong.views.CustomTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:paddingTop="@dimen/dimen_10dp"
                            android:paddingBottom="@dimen/dimen_10dp"
                            android:text="@string/amount_of_money"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14sp" />

                        <com.ems.dingdong.views.CustomTextView
                            android:id="@+id/tv_Unsuccess_AmountOfMoney"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.3"
                            android:paddingTop="@dimen/dimen_10dp"
                            android:paddingBottom="@dimen/dimen_10dp"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14sp" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dimen_40dp"
        android:orientation="horizontal"
        android:padding="@dimen/size_10dp">

        <ImageView
            android:id="@+id/img_searchDebit"
            android:layout_width="@dimen/size_50dp"
            android:layout_height="@dimen/size_50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_choose_calendar" />
    </RelativeLayout>

</LinearLayout>
